--- a/1.html
+++ b/1.html
@@ -5,6 +5,15 @@
     <title>Title</title>
 </head>
 <body>
-    hello web
+hello
+<h1>w3c</h1>
+<h1>This is heading 1</h1>
+<h2>This is heading 2</h2>
+<p style="margin-top:45px;">
+<h3>This is heading 3</h3>
+<img src="coding.jpg" width="200">
+<h4>This is heading 4</h4>
+</p>
+<h6>This is heading 5<br>This is heading 6</h6>
 </body>
 </html>
