--- a/1.html
+++ b/1.html
@@ -2,18 +2,25 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>WEB1-html</title>
 </head>
+
 <body>
-hello
-<h1>w3c</h1>
-<h1>This is heading 1</h1>
-<h2>This is heading 2</h2>
-<p style="margin-top:45px;">
-<h3>This is heading 3</h3>
-<img src="coding.jpg" width="200">
-<h4>This is heading 4</h4>
+<ol>
+    <li>HTML</li>
+    <li>CSS</li>
+    <li>JavaScript</li>
+</ol>
+
+<h1>HTML</h1>
+<p>
+    With <a href="https://www.w3.org/TR/2010/WD-html5-20100624/" target="_blank" title="html5 specification">HTML</a> you can create your own Website.<br>
+    This tutorial teaches you everything about HTML.<br>
 </p>
-<h6>This is heading 5<br>This is heading 6</h6>
+<img src="coding.jpg" width="200">
+
+<p style="margin-top:45px;">
+    HTML is easy to learn - You will enjoy it
+</p>
 </body>
 </html>
