--- a/1.html
+++ b/1.html
@@ -2,25 +2,27 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>WEB1-html</title>
+    <title>WEB1-HTML</title>
 </head>
 
 <body>
+<h1><a href="index.html">WEB</h1>
+
 <ol>
-    <li>HTML</li>
-    <li>CSS</li>
-    <li>JavaScript</li>
+    <li><a href="1.html">HTML</a></li>
+    <li><a href="2.html">CSS</a></i>
+    <li><a href="3.html">JavaScript</a></li>
 </ol>
 
-<h1>HTML</h1>
+<h2>HTML</h2>
 <p>
-    With <a href="https://www.w3.org/TR/2010/WD-html5-20100624/" target="_blank" title="html5 specification">HTML</a> you can create your own Website.<br>
-    This tutorial teaches you everything about HTML.<br>
+    <a href="https://www.w3.org/TR/html5/" target="_blank" title="html5 spectification">Hypertext Markup Language (HTML)</a> is the standard markup language for creating web pages and web applications. With Cascading Style Sheets (CSS) and JavaScript, it forms a triad of cornerstone technologies for the World Wide Web.
+    <img src="coding.jpg" width="200">
 </p>
-<img src="coding.jpg" width="200">
 
 <p style="margin-top:45px;">
-    HTML is easy to learn - You will enjoy it
+    HTML elements are the building blocks of HTML pages. With HTML constructs, images and other objects such as interactive forms may be embedded into the rendered page. HTML provides a means to create structured documents by denoting structural semantics for text such as headings, paragraphs, lists, links, quotes and other items. HTML elements are delineated by tags, written using angle brackets. Tags such as <img /> and <input /> directly introduce content into the page. Other tags such as <p> surround and provide information about document text and may include other tags as sub-elements. Browsers do not display the HTML tags, but use them to interpret the content of the page
 </p>
+
 </body>
 </html>
